updated to latest main version
- updated new language codes

--- a/Translations/German/language-change.xml
+++ b/Translations/German/language-change.xml
@@ -2,8 +2,12 @@
 <Root>
 	<Entry>
         <zType>LANGUAGE_TRANSLATION</zType>
-        <Name>TEXT_LANGUAGE_GERMAN_TRANSLATION</Name>
+        <Name>TEXT_LANGUAGE_GERMAN</Name>
+		<zFieldName>de-DE</zFieldName>
+		<zFieldNameSecondary>Revan</zFieldNameSecondary>
         <zISOCode>de</zISOCode>
+		<iExportColumn>3</iExportColumn>
+		<bPublicBuild>1</bPublicBuild>
         <zSingularExpression>x==1</zSingularExpression>
         <zThousandsSeparator>.</zThousandsSeparator>
         <zDecimalSeparator>,</zDecimalSeparator>
