--- a/Translations/German/text-infos-add.xml
+++ b/Translations/German/text-infos-add.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Root>
     <Entry>
-        <zType>TEXT_LANGUAGE_GERMAN_TRANSLATION</zType>
-        <Translation>Deutsch</Translation>
+        <zType>TEXT_LANGUAGE_GERMAN</zType>
+        <de-DE>Deutsch</de-DE>
     </Entry>
 </Root>
