--- a/Translations/German/text-character-change.xml
+++ b/Translations/German/text-character-change.xml
@@ -1,221 +1,221 @@
-<!-- German Translation (© Revan ©) -->
+<!-- German de-DE (© Revan ©) -->
 
 <Root>
 	<Entry>
 		<zType/>
-		<Translation/>
+		<de-DE/>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_TITLE_KING</zType>
-		<Translation>{masculine_0:König:Königin} {0_name}</Translation>
+		<de-DE>{masculine_0:König:Königin} {0_name}</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_TITLE_KING_CONSORT</zType>
-		<Translation>{masculine_0:König Gemahl:Königin Gemahlin} {0_name}</Translation>
+		<de-DE>{masculine_0:König Gemahl:Königin Gemahlin} {0_name}</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_TITLE_KING_DOWAGER</zType>
-		<Translation>{masculine_0:Königswitwer:Königinwitwe} {0_name}</Translation>
+		<de-DE>{masculine_0:Königswitwer:Königinwitwe} {0_name}</de-DE>
 	</Entry>
   <Entry>
     <zType>TEXT_CHARACTER_TITLE_PRINCE</zType>
-		<Translation>{masculine_0:Prinz:Prinzessin} {0_name}</Translation>
+		<de-DE>{masculine_0:Prinz:Prinzessin} {0_name}</de-DE>
   </Entry>
   <Entry>
     <zType>TEXT_CHARACTER_TITLE_PRINCE_CONSORT</zType>
-		<Translation>{masculine_0:Prinz Gemahl:Prinzessin Gemahlin} {0_name}</Translation>
+		<de-DE>{masculine_0:Prinz Gemahl:Prinzessin Gemahlin} {0_name}</de-DE>
   </Entry>
   <Entry>
     <zType>TEXT_CHARACTER_TITLE_DUKE</zType>
-		<Translation>{masculine_0:Herzog:Herzogin} {0_name}</Translation>
+		<de-DE>{masculine_0:Herzog:Herzogin} {0_name}</de-DE>
   </Entry>
   <Entry>
     <zType>TEXT_CHARACTER_TITLE_DUKE_CONSORT</zType>
-		<Translation>{masculine_0:Herzog Gemahl:Herzogin Gemahlin} {0_name}</Translation>
+		<de-DE>{masculine_0:Herzog Gemahl:Herzogin Gemahlin} {0_name}</de-DE>
   </Entry>
   <Entry>
     <zType>TEXT_CHARACTER_TITLE_COUNCIL</zType>
-    <Translation>{0_title} {1_name}</Translation>
+    <de-DE>{0_title} {1_name}</de-DE>
   </Entry>
   <Entry>
     <zType>TEXT_CHARACTER_TITLE_GENERAL</zType>
-    <Translation>Feh. {0_name}</Translation>
+    <de-DE>Feh. {0_name}</de-DE>
   </Entry>
   <Entry>
     <zType>TEXT_CHARACTER_TITLE_GOVERNOR</zType>
-    <Translation>Sth. {0_name}</Translation>
+    <de-DE>Sth. {0_name}</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_TITLE_AGENT</zType>
-		<Translation>Agent {0_name}</Translation>
+		<de-DE>Agent {0_name}</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_TITLE_PATRIARCH</zType>
-		<Translation>{masculine_0:Patriarch:Matriarch} {0_name}</Translation>
+		<de-DE>{masculine_0:Patriarch:Matriarch} {0_name}</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_TITLE_OLIGRARCH</zType>
-		<Translation>Oligarch {0_name}</Translation>
+		<de-DE>Oligarch {0_name}</de-DE>
 	</Entry>
   <!-- Relation -->
 	<Entry comment="TEXT_CHARACTER_RELATION texts have the leader (i.e. 'You') as variable index 1 for gender">
 		<zType>TEXT_CHARACTER_RELATION_YOU</zType>
-		<Translation>Du</Translation>
+		<de-DE>Du</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_RELATION_SPOUSE</zType>
-		<Translation><![CDATA[<masculine_0>Dein Ehemann<feminine>Deine Ehefrau<end>]]></Translation>
+		<de-DE><![CDATA[<masculine_0>Dein Ehemann<feminine>Deine Ehefrau<end>]]></de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_RELATION_CHILD</zType>
-		<Translation><![CDATA[<masculine_0>Dein Sohn<feminine>Deine Tochter<end>]]></Translation>
+		<de-DE><![CDATA[<masculine_0>Dein Sohn<feminine>Deine Tochter<end>]]></de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_RELATION_GRANDCHILD</zType>
-		<Translation><![CDATA[<masculine_0>Dein Enkel<feminine>Deine Enkelin<end>]]></Translation>
+		<de-DE><![CDATA[<masculine_0>Dein Enkel<feminine>Deine Enkelin<end>]]></de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_RELATION_DESCENDANT</zType>
-		<Translation>Deine Nachkommen</Translation>
+		<de-DE>Deine Nachkommen</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_RELATION_PARENT</zType>
-		<Translation><![CDATA[<masculine_0>Dein Vater<feminine>Deine Mutter<end>]]></Translation>
+		<de-DE><![CDATA[<masculine_0>Dein Vater<feminine>Deine Mutter<end>]]></de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_RELATION_GRANDPARENT</zType>
-		<Translation><![CDATA[<masculine_0>Dein Großvater<feminine>Deine Großmutter<end>]]></Translation>
+		<de-DE><![CDATA[<masculine_0>Dein Großvater<feminine>Deine Großmutter<end>]]></de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_RELATION_ANCESTOR</zType>
-		<Translation>Deine Vorfahren</Translation>
+		<de-DE>Deine Vorfahren</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_RELATION_SIBLING</zType>
-		<Translation><![CDATA[<masculine_0>Dein Bruder<feminine>Deine Schwester<end>]]></Translation>
+		<de-DE><![CDATA[<masculine_0>Dein Bruder<feminine>Deine Schwester<end>]]></de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_RELATION_SIBLING_IN_LAW</zType>
-		<Translation><![CDATA[<masculine_0>Dein Schwager<feminine>Deine Schwägerin<end>]]></Translation>
+		<de-DE><![CDATA[<masculine_0>Dein Schwager<feminine>Deine Schwägerin<end>]]></de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_RELATION_HALF_SIBLING</zType>
-		<Translation><![CDATA[<masculine_0>Dein Halb-Bruder<feminine>Deine Halb-Schwester<end>]]></Translation>
+		<de-DE><![CDATA[<masculine_0>Dein Halb-Bruder<feminine>Deine Halb-Schwester<end>]]></de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_RELATION_COUSIN</zType>
-		<Translation>Dein(e) Cousin(e)</Translation>
+		<de-DE>Dein(e) Cousin(e)</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_RELATION_AUNT_UNCLE</zType>
-		<Translation><![CDATA[<masculine_0>Dein Onkel<feminine>Deine Tante<end>]]></Translation>
+		<de-DE><![CDATA[<masculine_0>Dein Onkel<feminine>Deine Tante<end>]]></de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_RELATION_NIECE_NEPHEW</zType>
-		<Translation><![CDATA[<masculine_0>Dein Neffe<feminine>Deine Nichte<end>]]></Translation>
+		<de-DE><![CDATA[<masculine_0>Dein Neffe<feminine>Deine Nichte<end>]]></de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_RELATION_CHILD_IN_LAW</zType>
-		<Translation><![CDATA[<masculine_0>Dein Schwiegersohn<feminine>Deine Schwiegertochter<end>]]></Translation>
+		<de-DE><![CDATA[<masculine_0>Dein Schwiegersohn<feminine>Deine Schwiegertochter<end>]]></de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_RELATION_PARENT_IN_LAW</zType>
-		<Translation><![CDATA[<masculine_0>Dein Schwiegervater<feminine>Deine Schwiegermutter<end>]]></Translation>
+		<de-DE><![CDATA[<masculine_0>Dein Schwiegervater<feminine>Deine Schwiegermutter<end>]]></de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_RELATION_STEPCHILD</zType>
-		<Translation><![CDATA[<masculine_0>Dein Stiefsohn<feminine>Deine Stieftochter<end>]]></Translation>
+		<de-DE><![CDATA[<masculine_0>Dein Stiefsohn<feminine>Deine Stieftochter<end>]]></de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_RELATION_STEPPARENT</zType>
-		<Translation><![CDATA[<masculine_0>Dein Stiefvater<feminine>Deine Stiefmutter<end>]]></Translation>
+		<de-DE><![CDATA[<masculine_0>Dein Stiefvater<feminine>Deine Stiefmutter<end>]]></de-DE>
 	</Entry>
   <Entry>
     <zType>TEXT_CHARACTER_RELATION_RELATIVE</zType>
-    <Translation>Deine Verwandten</Translation>
+    <de-DE>Deine Verwandten</de-DE>
   </Entry>
   <Entry>
     <zType>TEXT_CHARACTER_RELATION_IN_LAW</zType>
-    <Translation>Deine angeheirateten Verwandten</Translation>
+    <de-DE>Deine angeheirateten Verwandten</de-DE>
   </Entry>
   <!-- Heir -->
 	<Entry>
 		<zType>TEXT_CHARACTER_HEIR_ORDER_1</zType>
-		<Translation>Erbe</Translation>
+		<de-DE>Erbe</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_HEIR_ORDER_2</zType>
-		<Translation>Zweiter in der Thronfolge</Translation>
+		<de-DE>Zweiter in der Thronfolge</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_HEIR_ORDER_3</zType>
-		<Translation>Dritter in der Thronfolge</Translation>
+		<de-DE>Dritter in der Thronfolge</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_HEIR_ORDER_4</zType>
-		<Translation>Vierter in der Thronfolge</Translation>
+		<de-DE>Vierter in der Thronfolge</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_HEIR_ORDER_X</zType>
-		<Translation>Entfernter Nachfolger</Translation>
+		<de-DE>Entfernter Nachfolger</de-DE>
 	</Entry>
 	<!-- Misc -->
 	<Entry>
 		<zType>TEXT_CHARACTER_DEAD</zType>
-		<Translation>icon(DeathSkull) {0_name}</Translation>
+		<de-DE>icon(DeathSkull) {0_name}</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_HAS_COGNOMEN</zType>
-		<Translation>{0_name} {1_cognomen}</Translation>
+		<de-DE>{0_name} {1_cognomen}</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_GENERAL_OF</zType>
-		<Translation>link(CONCEPT_GENERAL) von {0_unit}</Translation>
+		<de-DE>link(CONCEPT_GENERAL) von {0_unit}</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_GOVERNOR_OF</zType>
-		<Translation>link(CONCEPT_GOVERNOR) von {0_city}</Translation>
+		<de-DE>link(CONCEPT_GOVERNOR) von {0_city}</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_AGENT_IN</zType>
-		<Translation>link(CONCEPT_AGENT) in {0_city}</Translation>
+		<de-DE>link(CONCEPT_AGENT) in {0_city}</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_YOUR_HEIR</zType>
-		<Translation>Dein Erbe</Translation>
+		<de-DE>Dein Erbe</de-DE>
 	</Entry>
 	<!-- Name -->
 	<Entry>
 		<zType>TEXT_CHARACTER_FULL_NAME_EXTRA</zType>
-		<Translation> ({0_data})</Translation>
+		<de-DE> ({0_data})</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_FIRST_AND_LAST_NAME</zType>
-		<Translation>{0_firstname} {1_lastname}</Translation>
+		<de-DE>{0_firstname} {1_lastname}</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_NAME_WITH_SUFFIX</zType>
-		<Translation>{0_name} {1_suffix}</Translation>
+		<de-DE>{0_name} {1_suffix}</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_OF_NATION</zType>
-		<Translation>{0_name} of {1_nation}</Translation>
+		<de-DE>{0_name} of {1_nation}</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_THE_YOUNGER</zType>
-		<Translation>der Jüngste</Translation>
+		<de-DE>der Jüngste</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_THE_ELDER</zType>
-		<Translation>der Älteste</Translation>
+		<de-DE>der Älteste</de-DE>
 	</Entry>
 	<!--Game Text-->
 	<Entry>
 		<zType>TEXT_CHARACTER_HAS_DIED</zType>
-		<Translation>{0_character} ist gestorben!</Translation>
+		<de-DE>{0_character} ist gestorben!</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_CHARACTER_LEADER_NEW_COGNOMEN</zType>
-		<Translation>Du bist nun bekannt als {0_name} {1_cognomen}!</Translation>
+		<de-DE>Du bist nun bekannt als {0_name} {1_cognomen}!</de-DE>
 	</Entry>
 </Root>
