--- a/Translations/German/text-family-change.xml
+++ b/Translations/German/text-family-change.xml
@@ -1,137 +1,137 @@
-<!-- German Translation (© Revan ©) -->
+<!-- German de-DE (© Revan ©) -->
 
 <Root>
 	<!-- Title -->
 	<Entry>
 		<zType/>
-		<Translation/>
+		<de-DE/>
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_SARGONID</zType>
-		<Translation>Sargonide~Sargoniden~Sargonide</Translation>
+		<de-DE>Sargonide~Sargoniden~Sargonide</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_ADASI</zType>
-		<Translation>Adasi~Adasis~Adasi</Translation>
+		<de-DE>Adasi~Adasis~Adasi</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_ERISHUM</zType>
-		<Translation>Erishum~Erishums~Erishum</Translation>
+		<de-DE>Erishum~Erishums~Erishum</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_TUDIYA</zType>
-		<Translation>Tudiya~Tudiyas~Tudiya</Translation>
+		<de-DE>Tudiya~Tudiyas~Tudiya</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_CHALDEAN</zType>
-		<Translation>Chaldäer~Chaldäer~Chaldäer</Translation>
+		<de-DE>Chaldäer~Chaldäer~Chaldäer</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_AMORITE</zType>
-		<Translation>Amoriter~Amoriter~Amoriter</Translation>
+		<de-DE>Amoriter~Amoriter~Amoriter</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_KASSITE</zType>
-		<Translation>Kassite~Kassiten~Kassite</Translation>
+		<de-DE>Kassite~Kassiten~Kassite</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_ISIN</zType>
-		<Translation>Isin~Isins~Isin</Translation>
+		<de-DE>Isin~Isins~Isin</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_BARCID</zType>
-		<Translation>Barkide~Barkiden~Barkide</Translation>
+		<de-DE>Barkide~Barkiden~Barkide</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_MAGONID</zType>
-		<Translation>Magonid~Magonids~Magonid</Translation>
+		<de-DE>Magonid~Magonids~Magonid</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_HANNONID</zType>
-		<Translation>Magonide~Magoniden~Magonide</Translation>
+		<de-DE>Magonide~Magoniden~Magonide</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_DIDONIAN</zType>
-		<Translation>Didonian~Didonians~Didonian</Translation>
+		<de-DE>Didonian~Didonians~Didonian</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_RAMESSIDE</zType>
-		<Translation>Ramesside~Ramessiden~Ramesside</Translation>
+		<de-DE>Ramesside~Ramessiden~Ramesside</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_THUTMOSID</zType>
-		<Translation>Thutmosi~Thutmosen~Thutmosi</Translation>
+		<de-DE>Thutmosi~Thutmosen~Thutmosi</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_AMARNA</zType>
-		<Translation>Amarna~Amarnas~Amarna</Translation>
+		<de-DE>Amarna~Amarnas~Amarna</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_SAITE</zType>
-		<Translation>Saite~Saites~Saite</Translation>
+		<de-DE>Saite~Saites~Saite</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_ARGEAD</zType>
-		<Translation>Argeade~Argeaden~Argeade</Translation>
+		<de-DE>Argeade~Argeaden~Argeade</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_ALCMAEONID</zType>
-		<Translation>Alkmaionide~Alkmaioniden~Alkmaionide</Translation>
+		<de-DE>Alkmaionide~Alkmaioniden~Alkmaionide</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_CYPSELID</zType>
-		<Translation>Cypselid~Cypselids~Cypselid</Translation>
+		<de-DE>Cypselid~Cypselids~Cypselid</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_SELEUCID</zType>
-		<Translation>Seleukide~Seleukiden~Seleukide</Translation>
+		<de-DE>Seleukide~Seleukiden~Seleukide</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_ACHAEMENID</zType>
-		<Translation>Achaemenid~Achaemenids~Achaemenid</Translation>
+		<de-DE>Achaemenid~Achaemenids~Achaemenid</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_ARSACID</zType>
-		<Translation>Achämenide~Achämeniden~Achämenide</Translation>
+		<de-DE>Achämenide~Achämeniden~Achämenide</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_SASANID</zType>
-		<Translation>Sassanide~Sassaniden~Sassanide</Translation>
+		<de-DE>Sassanide~Sassaniden~Sassanide</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_MIHRANID</zType>
-		<Translation>Mihranid~Mihranids~Mihranid</Translation>
+		<de-DE>Mihranid~Mihranids~Mihranid</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_JULIUS</zType>
-		<Translation>Julius~Julii~Julian</Translation>
+		<de-DE>Julius~Julii~Julian</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_JULIUS_FEMALE</zType>
-		<Translation>Julia~Juliae~Julian</Translation>
+		<de-DE>Julia~Juliae~Julian</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_FABIUS</zType>
-		<Translation>Fabius~Fabii~Fabian</Translation>
+		<de-DE>Fabius~Fabii~Fabian</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_FABIUS_FEMALE</zType>
-		<Translation>Fabia~Fabiae~Fabian</Translation>
+		<de-DE>Fabia~Fabiae~Fabian</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_VALERIUS</zType>
-		<Translation>Valerius~Valerii~Valerian</Translation>
+		<de-DE>Valerius~Valerii~Valerian</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_VALERIUS_FEMALE</zType>
-		<Translation>Valeria~Valeriae~Valerian</Translation>
+		<de-DE>Valeria~Valeriae~Valerian</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_CLAUDIUS</zType>
-		<Translation>Claudius~Claudii~Claudian</Translation>
+		<de-DE>Claudius~Claudii~Claudian</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_FAMILY_CLAUDIUS_FEMALE</zType>
-		<Translation>Claudia~Claudiae~Claudian</Translation>
+		<de-DE>Claudia~Claudiae~Claudian</de-DE>
 	</Entry>
 </Root>
