--- a/Translations/German/text-relationship-change.xml
+++ b/Translations/German/text-relationship-change.xml
@@ -1,166 +1,166 @@
-<!-- German Translation (© Revan ©) -->
+<!-- German de-DE (© Revan ©) -->
 
 <Root>
 	<Entry>
 		<zType/>
-		<Translation/>
+		<de-DE/>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_LOVER_OF</zType>
-		<Translation>Geliebete/r von</Translation>
+		<de-DE>Geliebete/r von</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_LOVER_OF_VERB</zType>
-		<Translation>Wird geliebte/r von</Translation>
+		<de-DE>Wird geliebte/r von</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_CONSPIRING_WITH</zType>
-		<Translation>Verschwören mit</Translation>
+		<de-DE>Verschwören mit</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_CONSPIRING_WITH_VERB</zType>
-		<Translation>Beginnt Verschwörung mit</Translation>
+		<de-DE>Beginnt Verschwörung mit</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_IN_LOVE_WITH</zType>
-		<Translation>Verliebt in</Translation>
+		<de-DE>Verliebt in</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_IN_LOVE_WITH_VERB</zType>
-		<Translation>Ist verliebt in</Translation>
+		<de-DE>Ist verliebt in</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_TERRIFIED_OF</zType>
-		<Translation>Verängstigt von</Translation>
+		<de-DE>Verängstigt von</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_TERRIFIED_OF_VERB</zType>
-		<Translation>Wird verängstigt von</Translation>
+		<de-DE>Wird verängstigt von</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_ENDEARED_TO</zType>
-		<Translation>Geschmeichelt von</Translation>
+		<de-DE>Geschmeichelt von</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_ENDEARED_TO_VERB</zType>
-		<Translation>Wird geschmeichelt von</Translation>
+		<de-DE>Wird geschmeichelt von</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_INTERCEDED_FOR</zType>
-		<Translation>Führsprache für</Translation>
+		<de-DE>Führsprache für</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_INTERCEDED_FOR_VERB</zType>
-		<Translation>Bekommt Führsprache für</Translation>
+		<de-DE>Bekommt Führsprache für</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_INFLUENCED_BY</zType>
-		<Translation>Beeinflusst von</Translation>
+		<de-DE>Beeinflusst von</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_INFLUENCED_BY_VERB</zType>
-		<Translation>Wird beeinflusst von</Translation>
+		<de-DE>Wird beeinflusst von</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_OWES_FAVOR_TO</zType>
-		<Translation>Schuldet Gefallen an</Translation>
+		<de-DE>Schuldet Gefallen an</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_OWES_FAVOR_TO_VERB</zType>
-		<Translation>Schuldet nun Gefallen an</Translation>
+		<de-DE>Schuldet nun Gefallen an</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_ASSASSINATED_BY</zType>
-		<Translation>Ermordert von</Translation>
+		<de-DE>Ermordert von</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_ASSASSINATED_BY_VERB</zType>
-		<Translation>Wurde ermordert von</Translation>
+		<de-DE>Wurde ermordert von</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_HOLDS_FAVOR_FROM</zType>
-		<Translation>Hält Gefallen von</Translation>
+		<de-DE>Hält Gefallen von</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_HOLDS_FAVOR_FROM_VERB</zType>
-		<Translation>Hält jetzt Gefallen von</Translation>
+		<de-DE>Hält jetzt Gefallen von</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_JEALOUS_ABOUT</zType>
-		<Translation>Eifersüchtig wegen</Translation>
+		<de-DE>Eifersüchtig wegen</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_JEALOUS_ABOUT_VERB</zType>
-		<Translation>Wird eifersüchtig wegen</Translation>
+		<de-DE>Wird eifersüchtig wegen</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_SUSPICIOUS_OF</zType>
-		<Translation>Misstrauisch auf</Translation>
+		<de-DE>Misstrauisch auf</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_SUSPICIOUS_OF_VERB</zType>
-		<Translation>Wird Misstrauisch auf</Translation>
+		<de-DE>Wird Misstrauisch auf</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_DISAPPOINTED_WITH</zType>
-		<Translation>Enttäuscht von</Translation>
+		<de-DE>Enttäuscht von</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_DISAPPOINTED_WITH_VERB</zType>
-		<Translation>Wird enttäuscht von</Translation>
+		<de-DE>Wird enttäuscht von</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_ESTRANGED_FROM</zType>
-		<Translation>Zerstritten mit</Translation>
+		<de-DE>Zerstritten mit</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_ESTRANGED_FROM_VERB</zType>
-		<Translation>Wird zerstritten mit</Translation>
+		<de-DE>Wird zerstritten mit</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_VENGEFUL_AGAINST</zType>
-		<Translation>Rachsüchtig gegen</Translation>
+		<de-DE>Rachsüchtig gegen</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_VENGEFUL_AGAINST_VERB</zType>
-		<Translation>Wird rachsüchtig gegen</Translation>
+		<de-DE>Wird rachsüchtig gegen</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_PLOTTING_AGAINST</zType>
-		<Translation>Verschwörung gegen</Translation>
+		<de-DE>Verschwörung gegen</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_PLOTTING_AGAINST_VERB</zType>
-		<Translation>Beginnt Verschwörung gegen</Translation>
+		<de-DE>Beginnt Verschwörung gegen</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_MADE_HEIR_BY</zType>
-		<Translation>Zum Erben ernannt von</Translation>
+		<de-DE>Zum Erben ernannt von</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_MADE_HEIR_BY_VERB</zType>
-		<Translation>Wurde zum Erben ernannt von</Translation>
+		<de-DE>Wurde zum Erben ernannt von</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_BYPASSED_BY</zType>
-		<Translation>Umgangen von</Translation>
+		<de-DE>Umgangen von</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_BYPASSED_BY_VERB</zType>
-		<Translation>Wurde umgangen von</Translation>
+		<de-DE>Wurde umgangen von</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_DIVORCED_BY</zType>
-		<Translation>Geschieden von</Translation>
+		<de-DE>Geschieden von</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_RELATIONSHIP_DIVORCED_BY_VERB</zType>
-		<Translation>Wurde geschieden von</Translation>
+		<de-DE>Wurde geschieden von</de-DE>
 	</Entry>
 <!--
 	<Entry>
 		<zType>TEXT_</zType>
-		<Translation></Translation>
+		<de-DE></de-DE>
 	</Entry>
 -->
 </Root>
