--- a/Translations/German/text-yield-change.xml
+++ b/Translations/German/text-yield-change.xml
@@ -1,127 +1,127 @@
-<!-- German Translation (© Revan ©) -->
+<!-- German de-DE (© Revan ©) -->
 
 <Root>
 	<!--Name-->
 	<Entry>
 		<zType/>
-		<Translation/>
+		<de-DE/>
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_GROWTH</zType>
-		<Translation>Wachstum~icon(YIELD_GROWTH)Wachstum</Translation>
+		<de-DE>Wachstum~icon(YIELD_GROWTH)Wachstum</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_GROWTH_HELP</zType>
-		<Translation>Wenn das link(YIELD_GROWTH){YIELD_GROWTH} einer Stadt steigt, bekommt die Stadt einen neuen Bürger. Grundlegende Wege um {link(YIELD_GROWTH){YIELD_GROWTH} zu steigern beinhaltet das ausbilden von link(SPECIALIST_FARMER,2) und bauen von link(IMPROVEMENTCLASS_BATHS,2).</Translation>
+		<de-DE>Wenn das link(YIELD_GROWTH){YIELD_GROWTH} einer Stadt steigt, bekommt die Stadt einen neuen Bürger. Grundlegende Wege um {link(YIELD_GROWTH){YIELD_GROWTH} zu steigern beinhaltet das ausbilden von link(SPECIALIST_FARMER,2) und bauen von link(IMPROVEMENTCLASS_BATHS,2).</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_CIVICS</zType>
-		<Translation>Verwaltung~icon(YIELD_CIVICS)Verwaltung</Translation>
+		<de-DE>Verwaltung~icon(YIELD_CIVICS)Verwaltung</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_CIVICS_HELP</zType>
-		<Translation>Wird benutzt um Spezialisten auszubilden und Projekte abzuschließen. Unbenutze {YIELD_CIVICS} wird dem nationalen Vorrat beigefügt, welcher benutzt werden kann um Gesetze zu Erlassen und Religionswissenschaft zu etablieren. Steigere {YIELD_CIVICS} durch den Bau von link(IMPROVEMENTCLASS_COURTHOUSE,2) und link(PROJECT_FORUM_1,2).</Translation>
+		<de-DE>Wird benutzt um Spezialisten auszubilden und Projekte abzuschließen. Unbenutze {YIELD_CIVICS} wird dem nationalen Vorrat beigefügt, welcher benutzt werden kann um Gesetze zu Erlassen und Religionswissenschaft zu etablieren. Steigere {YIELD_CIVICS} durch den Bau von link(IMPROVEMENTCLASS_COURTHOUSE,2) und link(PROJECT_FORUM_1,2).</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_CIVICS_ENCYCLOPEDIA</zType>
-		<Translation>Ein link(IMPROVEMENT_QUARRY) auf link(RESOURCE_MARBLE) zu errichten wird außerdem Verwaltung{YIELD_CIVICS} verliehen. Im mid-game, link(IMPROVEMENT_COURTHOUSE_1,2) und deren link(SPECIALISTCLASS_SCRIBE,1) gewähren zusätzliche Verwaltung{YIELD_CIVICS}.
+		<de-DE>Ein link(IMPROVEMENT_QUARRY) auf link(RESOURCE_MARBLE) zu errichten wird außerdem Verwaltung{YIELD_CIVICS} verliehen. Im mid-game, link(IMPROVEMENT_COURTHOUSE_1,2) und deren link(SPECIALISTCLASS_SCRIBE,1) gewähren zusätzliche Verwaltung{YIELD_CIVICS}.
 
 Familien der link(FAMILYCLASS_STATESMEN), link(FAMILYCLASS_PATRONS), oder link(FAMILYCLASS_SAGES) sind besser im generieren von Verwaltung{YIELD_CIVICS} in deren Städten.
 
-Wunder, wie link(IMPROVEMENT_COLOSSUS) oder link(IMPROVEMENT_ACROPOLIS) oder die link(THEOLOGY_GNOSTICISM) link(CONCEPT_THEOLOGY) sind andere Wege um Verwaltung{YIELD_CIVICS} anzukurbeln.</Translation>
+Wunder, wie link(IMPROVEMENT_COLOSSUS) oder link(IMPROVEMENT_ACROPOLIS) oder die link(THEOLOGY_GNOSTICISM) link(CONCEPT_THEOLOGY) sind andere Wege um Verwaltung{YIELD_CIVICS} anzukurbeln.</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_TRAINING</zType>
-		<Translation>Training~icon(YIELD_TRAINING)Training</Translation>
+		<de-DE>Training~icon(YIELD_TRAINING)Training</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_TRAINING_HELP</zType>
-		<Translation>Wird benutzt um Militäreinheiten auszubilden. Unbenutzes link(YIELD_TRAINING){YIELD_TRAINING} wird dem nationalen Vorrat beigefügt, welches benutzt werden kann um Einheiten zu befördern und zu verbessern. Verstärke link(YIELD_TRAINING){YIELD_TRAINING} durch den Bau von link(IMPROVEMENT_BARRACKS,2) und link(IMPROVEMENT_RANGE,2).</Translation>
+		<de-DE>Wird benutzt um Militäreinheiten auszubilden. Unbenutzes link(YIELD_TRAINING){YIELD_TRAINING} wird dem nationalen Vorrat beigefügt, welches benutzt werden kann um Einheiten zu befördern und zu verbessern. Verstärke link(YIELD_TRAINING){YIELD_TRAINING} durch den Bau von link(IMPROVEMENT_BARRACKS,2) und link(IMPROVEMENT_RANGE,2).</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_TRAINING_ENCYCLOPEDIA</zType>
-		<Translation>link(IMPROVEMENT_MINE,2) liefern Training{YIELD_TRAINING} wenn über link(RESOURCE_ORE) errichtet. Später bekommst du link(IMPROVEMENT_RANGE,2) und die link(MISSION_RALLY_TROOPS) Missionen. Beide link(IMPROVEMENT_BARRACKS,2) und link(IMPROVEMENT_RANGE,2) können link(SPECIALISTCLASS_OFFICER) Spezialisten ausbilden, welche eine Menge Training{YIELD_TRAINING} liefern können.
+		<de-DE>link(IMPROVEMENT_MINE,2) liefern Training{YIELD_TRAINING} wenn über link(RESOURCE_ORE) errichtet. Später bekommst du link(IMPROVEMENT_RANGE,2) und die link(MISSION_RALLY_TROOPS) Missionen. Beide link(IMPROVEMENT_BARRACKS,2) und link(IMPROVEMENT_RANGE,2) können link(SPECIALISTCLASS_OFFICER) Spezialisten ausbilden, welche eine Menge Training{YIELD_TRAINING} liefern können.
 
-Familien der link(FAMILYCLASS_CHAMPIONS), link(FAMILYCLASS_RIDERS), oder link(FAMILYCLASS_HUNTERS) sind besser im generieren von Training{YIELD_TRAINING} in deren Städten.</Translation>
+Familien der link(FAMILYCLASS_CHAMPIONS), link(FAMILYCLASS_RIDERS), oder link(FAMILYCLASS_HUNTERS) sind besser im generieren von Training{YIELD_TRAINING} in deren Städten.</de-DE>
 	</Entry>
 	<Entry>	
 		<zType>TEXT_YIELD_CULTURE</zType>
-		<Translation>Kultur~icon(YIELD_CULTURE)Kultur</Translation>
+		<de-DE>Kultur~icon(YIELD_CULTURE)Kultur</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_CULTURE_HELP</zType>
-		<Translation>Wenn die link(YIELD_CULTURE){YIELD_CULTURE} einer Stadt sich erhöht, geschieht ein positives Ereignis. Die komplette link(YIELD_CULTURE){YIELD_CULTURE} der Stadt beeinflusst welche Verbesserungen und Wunder gebaut werden können. Erhöhe link(YIELD_CULTURE){YIELD_CULTURE} durch den Bau von link(IMPROVEMENTCLASS_SHRINE,2) und link(IMPROVEMENTCLASS_ODEON,2).</Translation>
+		<de-DE>Wenn die link(YIELD_CULTURE){YIELD_CULTURE} einer Stadt sich erhöht, geschieht ein positives Ereignis. Die komplette link(YIELD_CULTURE){YIELD_CULTURE} der Stadt beeinflusst welche Verbesserungen und Wunder gebaut werden können. Erhöhe link(YIELD_CULTURE){YIELD_CULTURE} durch den Bau von link(IMPROVEMENTCLASS_SHRINE,2) und link(IMPROVEMENTCLASS_ODEON,2).</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_DISCONTENT</zType>
-		<Translation>Unzufriedenheit~icon(YIELD_DISCONTENT)Unzufriedenheit</Translation>
+		<de-DE>Unzufriedenheit~icon(YIELD_DISCONTENT)Unzufriedenheit</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_DISCONTENT_HELP</zType>
-		<Translation>Städte schüren langsam link(YIELD_DISCONTENT){YIELD_DISCONTENT} über die Zeit. Wenn sich die link(YIELD_DISCONTENT){YIELD_DISCONTENT} einer Stadt vermehrt, erhöht sich seine gesammtes link(YIELD_DISCONTENT){YIELD_DISCONTENT}, welches die link(YIELD_MAINTENANCE){YIELD_MAINTENANCE} erhöht und link(YIELD_GROWTH){YIELD_GROWTH} reduziert. Benutze link(PROJECT_FESTIVAL,2) um link(YIELD_DISCONTENT){YIELD_DISCONTENT} zu verringern.</Translation>
+		<de-DE>Städte schüren langsam link(YIELD_DISCONTENT){YIELD_DISCONTENT} über die Zeit. Wenn sich die link(YIELD_DISCONTENT){YIELD_DISCONTENT} einer Stadt vermehrt, erhöht sich seine gesammtes link(YIELD_DISCONTENT){YIELD_DISCONTENT}, welches die link(YIELD_MAINTENANCE){YIELD_MAINTENANCE} erhöht und link(YIELD_GROWTH){YIELD_GROWTH} reduziert. Benutze link(PROJECT_FESTIVAL,2) um link(YIELD_DISCONTENT){YIELD_DISCONTENT} zu verringern.</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_SCIENCE</zType>
-		<Translation>Wissenschaft~icon(YIELD_SCIENCE)Wissenschaft</Translation>
+		<de-DE>Wissenschaft~icon(YIELD_SCIENCE)Wissenschaft</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_SCIENCE_HELP</zType>
-		<Translation>Wird benutzt um Technologien zu erforschen. Steigere link(YIELD_SCIENCE){YIELD_SCIENCE} durch den Bau von link(PROJECT_ARCHIVE_1,2) und link(IMPROVEMENTCLASS_LIBRARY,2).</Translation>
+		<de-DE>Wird benutzt um Technologien zu erforschen. Steigere link(YIELD_SCIENCE){YIELD_SCIENCE} durch den Bau von link(PROJECT_ARCHIVE_1,2) und link(IMPROVEMENTCLASS_LIBRARY,2).</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_MONEY</zType>
-		<Translation>Geld~icon(YIELD_MONEY)Geld</Translation>
+		<de-DE>Geld~icon(YIELD_MONEY)Geld</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_MONEY_HELP</zType>
-		<Translation>{YIELD_MONEY}Geld wird benutzt um andere Ressourcen zu kaufen. Steigert link(YIELD_MONEY){YIELD_MONEY} durch den Bau von link(IMPROVEMENT_HAMLET,2) und link(IMPROVEMENTCLASS_MARKET,2).</Translation>
+		<de-DE>{YIELD_MONEY}Geld wird benutzt um andere Ressourcen zu kaufen. Steigert link(YIELD_MONEY){YIELD_MONEY} durch den Bau von link(IMPROVEMENT_HAMLET,2) und link(IMPROVEMENTCLASS_MARKET,2).</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_MAINTENANCE</zType>
-		<Translation>Instandhaltung~icon(YIELD_MAINTENANCE)Instandhaltung</Translation>
+		<de-DE>Instandhaltung~icon(YIELD_MAINTENANCE)Instandhaltung</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_MAINTENANCE_HELP</zType>
-		<Translation>Mindert die Anzahl von link(YIELD_MONEY){YIELD_MONEY} Einkommen die eine Stadt generiert. link(YIELD_MAINTENANCE) kann verringert werden wenn die Stadt mit deiner Hauptstadt verbunden wird.</Translation>
+		<de-DE>Mindert die Anzahl von link(YIELD_MONEY){YIELD_MONEY} Einkommen die eine Stadt generiert. link(YIELD_MAINTENANCE) kann verringert werden wenn die Stadt mit deiner Hauptstadt verbunden wird.</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_ORDERS</zType>
-		<Translation>Befehle~icon(YIELD_ORDERS)Befehle~Befehl~icon(YIELD_ORDERS)Befehl</Translation>
+		<de-DE>Befehle~icon(YIELD_ORDERS)Befehle~Befehl~icon(YIELD_ORDERS)Befehl</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_ORDERS_HELP</zType>
-		<Translation>link(YIELD_ORDERS){YIELD_ORDERS} können für verschiedene Aktionen ausgegeben werden, wie etwa bewegen, angreifen und Verbesserungen bauen. Ungenutzte {YIELD_ORDERS} werden für link(YIELD_MONEY){YIELD_MONEY} am Ende des Jahres verkauft.</Translation>
+		<de-DE>link(YIELD_ORDERS){YIELD_ORDERS} können für verschiedene Aktionen ausgegeben werden, wie etwa bewegen, angreifen und Verbesserungen bauen. Ungenutzte {YIELD_ORDERS} werden für link(YIELD_MONEY){YIELD_MONEY} am Ende des Jahres verkauft.</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_FOOD</zType>
-		<Translation>Nahrung~icon(YIELD_FOOD)Nahrung</Translation>
+		<de-DE>Nahrung~icon(YIELD_FOOD)Nahrung</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_FOOD_HELP</zType>
-		<Translation>Die Beste Quelle für {YIELD_FOOD}Nahrung sind link(IMPROVEMENT_FARM,2), welche banachbart zu link(CONCEPT_FRESH_WATER) und auf link(TERRAIN_LUSH) Gelände am ergiebigsten sind. {YIELD_FOOD}Nahrung wird benötigt um eure link(CONCEPT_POPULATION) zu ernähren und um neue link(UNIT_SETTLER,2) auszubilden.</Translation>
+		<de-DE>Die Beste Quelle für {YIELD_FOOD}Nahrung sind link(IMPROVEMENT_FARM,2), welche banachbart zu link(CONCEPT_FRESH_WATER) und auf link(TERRAIN_LUSH) Gelände am ergiebigsten sind. {YIELD_FOOD}Nahrung wird benötigt um eure link(CONCEPT_POPULATION) zu ernähren und um neue link(UNIT_SETTLER,2) auszubilden.</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_IRON</zType>
-		<Translation>Eisen~icon(YIELD_IRON)Eisen</Translation>
+		<de-DE>Eisen~icon(YIELD_IRON)Eisen</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_IRON_HELP</zType>
-		<Translation>Die Hauptquelle von {YIELD_IRON}Eisen sind link(IMPROVEMENT_MINE,2), welche auf link(RESOURCE_ORE) und/oder link(HEIGHT_HILL,2) am ergiebigsten sind. {YIELD_IRON}Iron wird benötigt um unterschiedliche Militär Einheiten auszubilden, darunter auch link(UNIT_WARRIOR,2) und link(UNIT_AXEMAN,2).</Translation>
+		<de-DE>Die Hauptquelle von {YIELD_IRON}Eisen sind link(IMPROVEMENT_MINE,2), welche auf link(RESOURCE_ORE) und/oder link(HEIGHT_HILL,2) am ergiebigsten sind. {YIELD_IRON}Iron wird benötigt um unterschiedliche Militär Einheiten auszubilden, darunter auch link(UNIT_WARRIOR,2) und link(UNIT_AXEMAN,2).</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_STONE</zType>
-		<Translation>Stein~icon(YIELD_STONE)Stein</Translation>
+		<de-DE>Stein~icon(YIELD_STONE)Stein</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_STONE_HELP</zType>
-		<Translation>Die Hauptquelle von {YIELD_STONE}Stein sind link(IMPROVEMENT_QUARRY,2), welcher auf link(RESOURCE_MARBLE), auf link(TERRAIN_ARID) Gelände und benachbart zu link(HEIGHT_MOUNTAIN,2) am ergiebigsten sind. {YIELD_STONE}Stein wird hauptsähclich benötigt um Verbesserungen zu errichten, wie etwa als link(IMPROVEMENTCLASS_SHRINE,2), und link(CONCEPT_PROJECT,2), wie als link(PROJECT_WALLS).</Translation>
+		<de-DE>Die Hauptquelle von {YIELD_STONE}Stein sind link(IMPROVEMENT_QUARRY,2), welcher auf link(RESOURCE_MARBLE), auf link(TERRAIN_ARID) Gelände und benachbart zu link(HEIGHT_MOUNTAIN,2) am ergiebigsten sind. {YIELD_STONE}Stein wird hauptsähclich benötigt um Verbesserungen zu errichten, wie etwa als link(IMPROVEMENTCLASS_SHRINE,2), und link(CONCEPT_PROJECT,2), wie als link(PROJECT_WALLS).</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_WOOD</zType>
-		<Translation>Holz~icon(YIELD_WOOD)Holz</Translation>
+		<de-DE>Holz~icon(YIELD_WOOD)Holz</de-DE>
 	</Entry>
 	<Entry>
 		<zType>TEXT_YIELD_WOOD_HELP</zType>
-		<Translation>{YIELD_WOOD}Holz kann entweder durch Fällen von link(VEGETATION_TREES) oder stattdessen durch errichten von link(IMPROVEMENT_LUMBERMILL,2) gesammelt werden . {YIELD_WOOD}Holz ist erforderlich um Stadt Verbesserungenen zu errichten, (wie zB. link(IMPROVEMENT_BARRACKS)), Militär Einheiten (link(UNIT_ARCHER,2)) und link(UNITTRAIT_SHIP) Einheiten (link(UNIT_BIREME,2)).</Translation>
+		<de-DE>{YIELD_WOOD}Holz kann entweder durch Fällen von link(VEGETATION_TREES) oder stattdessen durch errichten von link(IMPROVEMENT_LUMBERMILL,2) gesammelt werden . {YIELD_WOOD}Holz ist erforderlich um Stadt Verbesserungenen zu errichten, (wie zB. link(IMPROVEMENT_BARRACKS)), Militär Einheiten (link(UNIT_ARCHER,2)) und link(UNITTRAIT_SHIP) Einheiten (link(UNIT_BIREME,2)).</de-DE>
 	</Entry>
 </Root>
